# orderMatchingEngine

./: CMakeLists.txt  README.md  build.sh  callgrind.out.94115  profile_report.txt
src/: InputHandler.hpp  NcursesUI.hpp  Order.hpp  OrderQueue.hpp  Orderbook.hpp  TradeLogger.hpp  main.cpp
test/: tests.cpp
